Added io.netty dependance also changed the name of the Calculator runner, did some touch up on our appium driver factory